Fix the Stroke and Shape Id of the Pencil Tool

This patch fixes two issues:

1) Crash in Krita caused by non-initialized id of the shape
BUG:329967

2) Wrong stroke parameters of KoPencilTool calligra-wise
   The stroke was not initilized properly.

REVIEW:115352